spade-tests/src/snapshots/spade_tests__affine_check__checking_works_with_decld_value.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of consumed resource
  ┌─ testinput:8:26
  │
6 │     let _ = inst consume(x);
  │                          - Previously used here
7 │     let x = inst make_port();
8 │     let _ = inst consume(x);
  │                          ^ Use of consumed resource


