spade-tests/src/snapshots/spade_tests__affine_check__function_calls_consume_ports.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Use of consumed resource
  ┌─ testinput:7:38
  │
7 │     (inst consumer(p), inst consumer(p))
  │                    -                 ^ Use of consumed resource
  │                    │                  
  │                    Previously used here


