spade-tests/src/snapshots/spade_tests__affine_check__unused_transitive_field_causes_error.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused resource
  ┌─ testinput:8:10
  │
8 │ entity x(resource: B) -> bool {
  │          ^^^^^^^^ resource.a.x is unused
  │
  = note: resource.a.x is a &mut value which must be set


