spade-tests/src/snapshots/spade_tests__affine_check__unused_transitive_tuple_member_causes_error.snap
---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused resource
  ┌─ testinput:1:10
  │
1 │ entity x(resource: ((&mut bool, &bool), &bool)) -> bool {
  │          ^^^^^^^^ resource#0#0 is unused
  │
  = note: resource#0#0 is a &mut value which must be set


